# zap

./: .gitignore  Cargo.toml  Makefile  notes.txt  todo.txt
src/: core.rs  env.rs  eval.rs  main.rs  printer.rs  reader.rs  repl.rs  server.rs  std_repl.rs  tcp_repl.rs  tests.rs  types.rs
zap/: Cargo.toml
zap-core/: Cargo.toml
zap-core/src/: lib.rs
zap-for-profiling/: Cargo.toml
zap-for-profiling/src/: main.rs
zap-server/: Cargo.toml
zap-server/src/: main.rs  repl.rs  shared_env.rs
zap/src/: compiler.rs  env.rs  eval.rs  lib.rs  printer.rs  reader.rs  types.rs  vm.rs  zap.rs
