[package]
name = "zap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "./src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
tokio = { version = "1", features = ["full"] }
#regex = "1.5"


[profile.release]
lto = true

