[package]
name = "zap-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
zap = {path = "../zap/" }
zap-core = {path = "../zap-core/" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.4.3"
